--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,8 @@ add_subdirectory(csv-parser)
 
 include_directories(include include/toolbelt csv-parser/include)
 
-add_executable(qa apps/qa.cpp)
-target_sources(qa PRIVATE include/qa_set.cpp)
+add_executable(qa apps/qanda.cpp)
+target_sources(qa PRIVATE include/qa_set.cpp include/qa.cpp)
 
 add_executable(pi apps/pi.cpp)
 
