moving cross platform console abstraction into separate file/namespace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ add_compile_options(-Wall -Wextra -Wno-reorder-ctor)
 add_subdirectory(csv-parser)
 include_directories(include include/toolbelt csv-parser/include)
 add_executable(qa apps/qanda.cpp)
-target_sources(qa PRIVATE include/qa_set.cpp include/qa.cpp)
+target_sources(qa PRIVATE include/qa_set.cpp include/qa.cpp include/xos/console.cpp)
 
 add_executable(pi apps/pi.cpp)
 
