--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,21 +32,52 @@ include(scripts)
 # use Conan configuration if available
 conan_init(cmake)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 if (MSVC)
 	add_compile_options(-Wall)
 else()
-	add_compile_options(-Wall -Wextra -Wpedantic)
+	add_compile_options(-Wall -Wextra -Wpedantic -Wconversion) # -fsanitize=address)
 endif()
 
-add_subdirectory(csv-parser)
+find_package(benchmark REQUIRED)
+
 include_directories(include include/toolbelt csv-parser/include)
+
+add_subdirectory(csv-parser)
 add_executable(qa apps/qanda.cpp)
 target_sources(qa PRIVATE include/qa_set.cpp include/qa.cpp include/xos/console.cpp)
 
+target_link_libraries(qa PRIVATE Threads::Threads)
+target_link_libraries(qa PRIVATE csv)
+
 add_executable(pi apps/pi.cpp)
+add_executable(graph apps/graph.cpp)
+add_executable(fib apps/fib.cpp)
+
+add_executable(visitor apps/visitor.cpp)
+target_link_libraries(visitor benchmark::benchmark)
+
+add_subdirectory(include/fmt)
+add_executable(word_count apps/word_count.cpp)
+target_link_libraries(word_count PRIVATE fmt)
+
+add_executable(wgraph apps/wgraph.cpp)
+add_executable(move_copy_sem apps/move_copy_sem.cpp)
+
+add_executable(inheritance apps/inheritance.cpp)
+add_executable(variant apps/variant.cpp)
+add_executable(type_erasure apps/type_erasure.cpp)
+
+add_executable(dyno apps/dyno.cpp)
+target_include_directories(dyno PRIVATE include/dyno/include)
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
-target_link_libraries(qa PRIVATE Threads::Threads)
-target_link_libraries(qa PRIVATE csv)
+
+add_executable(mandel apps/mandel.cpp)
+target_link_libraries(mandel PRIVATE sfml-graphics sfml-window sfml-system tbb Threads::Threads)
+
+add_executable(mysql apps/mysql.cpp)
+target_link_libraries(mysql PRIVATE asan mariadbcpp)
+
+
