--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "include/ctre"]
 	path = include/ctre
 	url = https://github.com/hanickadot/compile-time-regular-expressions.git
+[submodule "include/date"]
+	path = include/date
+	url = https://github.com/HowardHinnant/date.git
