--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "include/date"]
 	path = include/date
 	url = https://github.com/HowardHinnant/date.git
+[submodule "include/fast_float"]
+	path = include/fast_float
+	url = https://github.com/fastfloat/fast_float.git
