--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ conan_init(cmake)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-string(APPEND CMAKE_EXE_LINKER_FLAGS " -fuse-ld=lld")
-string(APPEND CMAKE_SHARED_LINKER_FLAGS " -fuse-ld=lld")
-string(APPEND CMAKE_MODULE_LINKER_FLAGS " -fuse-ld=lld")
+string(APPEND CMAKE_EXE_LINKER_FLAGS " -fuse-ld=mold")
+string(APPEND CMAKE_SHARED_LINKER_FLAGS " -fuse-ld=mold")
+string(APPEND CMAKE_MODULE_LINKER_FLAGS " -fuse-ld=mold")
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
